--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
 		<!-- Main activity -->
 
 		<activity
-			android:name="org.kman.updatechecker.MainActivity"
+			android:name=".MainActivity"
 			android:launchMode="singleTop">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
