--- a/build.gradle
+++ b/build.gradle
@@ -51,14 +51,14 @@ android {
 		applicationId "org.kman.updatechecker"
 		minSdkVersion sdk_min
 		targetSdkVersion sdk_target
-		versionCode 4
+		versionCode 5
 		versionName "0.1"
 		testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 	}
 
 	buildTypes {
 		release {
-			minifyEnabled false
+			minifyEnabled true
 			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 		}
 	}
