--- a/build.gradle
+++ b/build.gradle
@@ -44,15 +44,23 @@ apply plugin: 'kotlin-android'
 
 // apply plugin: 'kotlin-android-extensions'
 
+ext {
+	VERSION_NAME = "0.1"
+	VERSION_CODE = 7
+}
+
 android {
 	compileSdkVersion sdk_compile
 
 	defaultConfig {
 		applicationId "org.kman.updatechecker"
+
 		minSdkVersion sdk_min
 		targetSdkVersion sdk_target
-		versionCode 6
-		versionName "0.1"
+
+		versionName "${VERSION_NAME}-${VERSION_CODE}"
+		versionCode VERSION_CODE
+
 		testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 	}
 
